Fixed contrast issues with the skip nav links

--- a/src/views/_screen.scss
+++ b/src/views/_screen.scss
@@ -11,3 +11,8 @@ body {
 		background: #2e5274;
 	}
 }
+
+.wb-sl {
+	background: $accent-blue;
+	color: #fff !important;
+}
